if (AMReX_SPACEDIM GREATER_EQUAL 2)
    add_executable(test_hydro2d_blast test_hydro2d_blast.cpp ${QuokkaObjSources})
    if(AMReX_GPU_BACKEND MATCHES "CUDA")
        setup_target_for_cuda_compilation(test_hydro2d_blast)
    endif()
  	add_test(NAME Blast2D COMMAND test_hydro2d_blast blast2d.in WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
endif()
