if (AMReX_SPACEDIM GREATER_EQUAL 2)
    add_executable(test_hydro2d_rm ../main.cpp ../CloudyCooling.cpp ../GrackleDataReader.cpp test_hydro2d_rm.cpp $<TARGET_OBJECTS:primordialchem>)
    if(AMReX_GPU_BACKEND MATCHES "CUDA")
        setup_target_for_cuda_compilation(test_hydro2d_rm)
    endif()
endif()
